Use 100% for height to prevent mobile browser UI from covering the app.

--- a/src/components/Navigation.module.css
+++ b/src/components/Navigation.module.css
@@ -1,5 +1,14 @@
+body {
+  height: 100%;
+}
+
+:global(#root) {
+  height: 100%;
+  overflow: hidden;
+}
+
 .wrapper {
-  height: 100vh;
+  height: 100%;
   display: flex;
   flex-direction: column;
 }
